--- a/themes/Dark.css
+++ b/themes/Dark.css
@@ -284,12 +284,17 @@ img[src*='trash'] {
 
 
 /* Misc Edits */
-.tab-panels {
-  padding-bottom: 10px;
-}
-
 .tab-panel {
   padding: 2px 8px;
+  padding-bottom: 8px;
+}
+
+#myGrid {
+  margin-right: 3px;
+}
+
+#gridRightPanel {
+  margin-left: 3px;
 }
 
 #heroes-section .reforgeSwitch .switch {
