Fixed some dropdowns not having their options localized, Fixed settings dropdowns not reflecting the actual setting values at launch, Fixed table row hover and select color behavior discrepancies between different themes, Enable table cell color gradients to blend with currently-selected theme color and set text color depending on gradient color lightness, Added some missing styles to the Light theme

--- a/themes/Light.css
+++ b/themes/Light.css
@@ -1,3 +1,39 @@
+/* Odd-Numbered Table Rows + Text Colour */
+.ag-theme-balham .ag-row:nth-child(odd) {
+  background-color: #fff;
+  color: #000;
+}
+
+/* Even-Numbered Table Rows + Text Colour */
+.ag-theme-balham .ag-row:nth-child(even) {
+  background-color: #fff;
+  color: #000;
+}
+
+/* Table Row Mouse Hover */
+.ag-theme-balham .ag-row-hover:nth-child(odd),
+.ag-theme-balham .ag-row-hover:nth-child(even) {
+  background-color: #daf1ff;
+}
+
+/* Table Row Selected */
+.ag-theme-balham .ag-row-selected:nth-child(odd),
+.ag-theme-balham .ag-row-selected:nth-child(even) {
+  background-color: #b7e4ff;
+}
+
+/* Dropdown Option Selected Colour */
+.ms-drop.bottom > ul > selected,
+.ms-drop ul > li.hide-radio.selected {
+  background-color: #007bff;
+}
+
+/* Dropdown Option Hover Colour */
+.ms-drop.bottom > ul > li:hover {
+  background-color: #daf1ff;
+}
+
+
 /* Dark Icons */
 .tooltipImage {
   content:url('./../resources/app.asar/assets/tooltip.png');
